Task-3: python-app/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: dockerhub usename/python-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
